# git-squash-rs

./: Cargo.toml
src/: main.rs
